# zerg

./: .env.example  LICENSE  README.md  README.txt  pyproject.toml  start.sh
src/app/: discord_gateway.py  main.py  webhooks.py
src/config/: agents.yaml  settings.py
src/core/: agents.py  consensus.py  context_builder.py  discussion_mode.py  model_assignment.py  orchestrator.py  scheduler.py  session.py  stance_tracking.py
src/llm/: model_catalog.py  rate_limits.py  router.py
src/tools/: registry.py
